[project]
name = "agents"
version = "0.1.0"
description = "Streamlit app that utilizes externally hosted LLMs (OpenAI) and a Milvus vector DB"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.3",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-milvus",
    "langchain-openai",
    "langchain-text-splitters",
    "langgraph",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary,pool]>=3.2.9",
    "streamlit",
]
